# media_server

./: Cargo.toml  index.html  root.html
public/: script.js  style.css
src/: handlers.rs  main.rs
